--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> a Club </title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="bg-gray-100">
+    <div 
+      id="root" 
+      class="relative w-full min-h-screen mx-auto bg-white shadow-lg overflow-x-hidden"
+      style="max-width: 420px;"
+    ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
